--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,14 @@
 name: CI for wztlink1013.github.io
 
-on: [push, watch]
+on:
+  push:
+    branches:    
+      - master
+    paths:
+      - 'README.md'
+  pull_request:
+    branches:
+      - master
 
 jobs:
   build:
