--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,6 @@
 name: CI for wztlink1013.github.io
 
-on:
-  push:
-    branches:    
-      - gh-pages
-    paths:
-      - 'README.md'
-  pull_request:
-    branches:
-      - gh-pages
+on: [push, pull_request]
 
 jobs:
   build:
@@ -35,5 +27,5 @@ jobs:
         cd .github_pages
         git status
         git add .
-        git commit -m "add gh-pages files"
+        git commit -m "add gh-pages files from tian-qin"
         git push --force --quiet "https://${Github_Token}@github.com/wztlink1013/wztlink1013.github.io"  master:master
